--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ boto3 >= 1.34.9
 streamlit >= 1.33.0
 python-dotenv >= 1.0.0
 PyJWT >= 2.8.0
+pydub >= 0.25.1
+#st-copy-to-clipboard == 0.1.6
+pillow == 10.3.0
